--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,22 +1,3 @@
-.App {
-  text-align: center;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-#message-area {
-    position: absolute;
-    bottom: 100px !important;
-    margin-bottom: 50px;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
-}
-
 @import url(https://fonts.googleapis.com/css?family=Roboto:400,300,600,400italic);
 * {
   margin: 0;
@@ -37,17 +18,34 @@ body {
   line-height: 30px;
   color: #777;
   background: #4CAF50;
+  height: 100%;
 }
+
+.App {
+  height: 100vh;
+  display: flex;
+}
+
+.App-intro {
+  font-size: large;
+}
+
+.header__text{
+  text-align: center;
+  text-transform: uppercase;
+  margin-bottom: 20px;
+}
+
+#message-area {
+    width: 100%;
+    padding: 0 0 0 10px;
+}
+
+
 
 .container {
-  max-width: 400px;
-  width: 100%;
-  margin: 0 auto;
-  position: relative;
-}
-
-#contact button[type="submit"] {
-  font: 400 12px/16px "Roboto", Helvetica, Arial, sans-serif;
+  width: 800px;
+  padding: 0 10px;
 }
 
 #contact {
@@ -57,38 +55,19 @@ body {
   box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
 }
 
-#contact button[type="submit"] {
-  cursor: pointer;
-  width: 100%;
-  border: none;
-  background: #4CAF50;
-  color: #FFF;
-  margin: 0 0 5px;
-  padding: 10px;
-  font-size: 15px;
-}
-
-#contact button[type="submit"]:hover {
-  background: #43A047;
-  -webkit-transition: background 0.3s ease-in-out;
-  -moz-transition: background 0.3s ease-in-out;
-  transition: background-color 0.3s ease-in-out;
-}
-
-#contact button[type="submit"]:active {
-  box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.5);
-}
-#contact input:focus,
-#contact textarea:focus {
-  outline: 0;
-  border: 1px solid #aaa;
-}
 
 #textarea {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    bottom: 500px;
-    /* bring your own prefixes */
-    transform: translate(-50%, -50%);
+    height: 100%;
+    width: 100%;
+    padding: 10px;
+    font-size: 14px;
+}
+
+.contact-submit{
+  width: 100%;
+  padding: 10px;
+  background-color: #43A047;
+  color: white;
+  border: none;
+  margin-top: 20px;
 }
